--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "redux-persist": "^6.0.0",
     "toaster": "^0.1.2"
   },
   "devDependencies": {
