--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-spinners": "^0.15.0",
     "redux-persist": "^6.0.0",
-    "toaster": "^0.1.2"
+    "toaster": "^0.1.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -30,6 +39,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
