--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install": "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -18,9 +19,9 @@
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "prop-types": "^15.8.1",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-datepicker": "^8.1.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.0.0",
     "react-hot-toast": "^2.5.2",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
