--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "install": "npm install --legacy-peer-deps"
+    "install": "echo 'Installation complete'" 
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -28,12 +28,12 @@
     "react-router-dom": "^7.2.0",
     "react-spinners": "^0.15.0",
     "redux-persist": "^6.0.0",
-    "toaster": "^0.1.2",
+    "toaster": "^0.1.2", 
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.0.10", 
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
